# lumina-care

./: .env.example  .env.test  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIAGNOSTICO_E_SOLUCOES.md  GITHUB_EXCELLENCE_EXECUTIVE_SUMMARY.md  GITHUB_EXCELLENCE_ROADMAP.md  LICENSE  Makefile  PHANTOMSEAL_CI_HARDENING.md  PRODUCT_REQUIREMENTS_PHANTOMSEAL.md  README.md  SECURITY.md  STATUS_REPORT.md  docker-compose.yml  jest.config.js  jest.setup.js  lint-staged.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security_vulnerability.md
.github/workflows/: backend-tests.yml  dependencies.yml  frontend-tests.yml  python-app.yml  validate.yml
.husky/: commit-msg  pre-commit
assets/: banner-github.md  prompts-image.md
brand/: manifesto.md  taglines.md  verbal-identity.md  visual-direction.md
demo/: README.md
docs/: AI_STRATEGY.md  API.md  CI_GOVERNANCE.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  ETHICS_AND_SAFETY.md  FAQ.md  IMPLEMENTATION_MATRIX.md  PROBLEM_STATEMENT.md  PRODUCT_VISION.md  README_EXECUTIVE_SCAN.md  REPO_STATUS.md  ROADMAP.md  SETUP.md  SOLUTION_OVERVIEW.md  SYSTEM_ARCHITECTURE.md  TESTING.md  USER_PERSONAS.md  USE_CASES.md  thesis.md
ethics/: clinical_boundaries.md  data_governance.md  principles.md
phantom-seal/: .env.example  README.md  requirements-ci.txt  requirements.txt  signer.py  verify.py
phantom-seal/evidence/: bundle_2026-04-12_01-12-07_7d9916ee2915.json  bundle_2026-04-12_01-18-12_DRYRUN43ed64.json  laudo_2026-04-12_01-12-07.md  laudo_2026-04-12_01-18-12.md  laudo_template.md
phantom-seal/scripts/: seal.py  verify.py
pitch/: executive_summary.md
prompts/: care_recommendations.md  risk_assessment.md  triage_analysis.md
research/: literature_review.md
src/api/: main.py  requirements.txt
src/api/models/: alerts.py  care_plan.py  checkin.py  longitudinal.py  patient.py  triage.py
src/api/routers/: alerts.py  care_plans.py  checkins.py  insights.py  patients.py  phantomseal.py  triage.py
src/api/services/: ai_service.py  longitudinal.py  phantomseal_service.py  risk_analysis.py
src/api/tests/: conftest.py  test_main.py  test_risk_analysis.py
src/api/tests/models/: test_schemas.py
src/api/tests/routers/: test_insights.py  test_patients.py  test_triage.py
src/web/: package.json  tsconfig.json
src/web/.next/: trace
src/web/.next/cache/webpack/server-production/: index.pack
src/web/.next/server/: server-reference-manifest.js  server-reference-manifest.json
src/web/.next/server/app/: page.js  page.js.nft.json
src/web/.next/server/app/_not-found/: page.js  page.js.nft.json
src/web/.next/server/app/dashboard/: page.js  page.js.nft.json
src/web/.next/server/chunks/: 892.js
src/web/.next/types/app/: layout.ts  page.ts
src/web/.next/types/app/dashboard/: page.ts
src/web/app/: globals.css  layout.tsx  page.tsx
src/web/app/dashboard/: page.tsx
src/web/app/patients/[id]/: page.tsx
src/web/app/triage/: page.tsx
